Added sound fx, disables upon win, other bug fixes